Removes Commons Lang usage